melhorias na pagina home e curriculo

--- a/curriculo.html
+++ b/curriculo.html
@@ -25,7 +25,7 @@
 	<body>
 		<section>
 		<div class="t-header"><h3>EXPERIÊNCIAS</h3>
-		<a href="#">BAIXAR CV</a></div>
+		<a href="https://drive.google.com/file/d/1Jm666PZhwpD6-Xq5HEkFLIpj2B0iUlMc/view?usp=drive_link.PDF" download="CURRICULO.PDF" target="_blank">BAIXAR CV</a></div>
 		<container>
 			<div id="cont-left">
 				<p>2023-ATUAL</p>
@@ -36,7 +36,7 @@
 				<p>	Atendimento ao cliente, sugestão de itens para compra, solução de problemas, 
 					consultar e oferecer descontos para fidelização, auxílio com todo suporte necessário,
 					seja para pagamentos ou dificuldades na comunicação, prezados pelo atendimento de qualidade.</p>
-				<p>Sou carismático, atencioso e confiante.</p>
+				<p>Tudo que faço, faço com dedicação.</p>
 			</div>
 		</container>
 		</section>
