--- a/portfolio.HTML
+++ b/portfolio.HTML
@@ -39,9 +39,11 @@
 <section id="safe-right">
 <h1>Olá</h1>
 <div><p>Meu portfólio</p></div>
-<button><a href="curriculo.html" target="_blank">MEU CURRÍCULO</a></button>
+<a href="curriculo.html" target="_blank">MEU CURRÍCULO</a>
 <br>
-<div class="text">Olá, meu nome é Paulo e sou um aluno de Analista de Testes. Atualmente, possuo conhecimentos em Teste de Sistema Manual, HTML/CSS, SQL e GIT. Este é o meu portfólio, onde você pode encontrar informações sobre meus projetos e experiências na área de teste de software. Sinta-se à vontade para explorar e entrar em contato comigo se tiver alguma dúvida ou oportunidade de emprego na área de teste de software.</div>
+<div class="text">Olá, meu nome é Paulo e sou um amante da tecnologia. Atualmente, possuo conhecimentos em Teste de Sistema Manual, Testes de Integração, Testes de Regressão, Testes Explorátorios, Testes de Unidade e Testes Automatizados.
+Tambem possuo conhecimentos em: HMTL, CSS, SQL, JavaScript, Jest, CI/CD.
+</div>
 </section>
 </main>
 <footer>
@@ -54,4 +56,4 @@
    
 </footer>
 </body>
-</html>
+</html> <!--Sinta-se à vontade para explorar e entrar em contato comigo se tiver alguma dúvida ou oportunidade de emprego na área de teste de software.Este é o meu portfólio, onde você pode encontrar informações sobre meus projetos e experiências na área de teste de software.--!>
